# datecopy

./: .gitignore  README.md  claude.md  create-shortcut.ps1  index.html  package-lock.json  package.json  vite.config.ts  启动DateCopy.bat
.claude/: settings.local.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FormatSelect.vue  Settings.vue  TimeDisplay.vue  TimerReminder.vue  TitleBar.vue
src/stores/: settings.ts
src/styles/: global.css  variables.css
src/utils/: dateFormat.ts
